@@ -1,3 +1,10 @@
+2006-03-12 AIDA Shinra <shinra@j10n.org>
+* Move $fink_prefix/etc/xinitrc.d/50kinput2.sh to the kinput2 package.
+* Small cleanup.
+* build.sh: go cd -> go_cd
+* sedsrc/kinput2.sh.in: removed
+* sedsrc/xmodmap-ja.sh.in: renamed to simple/xmodma-ja.sh
+
 2006-03-07 AIDA Shinra <shinra@j10n.org>
 * 2.3 release
 * user-ja.info.in: fix Depends
@@ -214,4 +221,4 @@
 2004-04-12 AIDA Shinra <shinra@j10n.org>
 * Initial revision
 
-$Id: ChangeLog,v 1.2 2006/03/07 13:19:21 aida_s Exp $
+$Id: ChangeLog,v 1.3 2006/03/07 13:29:10 aida_s Exp $
